<resources>
    <string name="app_name">MoneyDexter</string>
    <string name="date1">Date</string>
    <string name="title">MoneyDexter</string>
    <string name="today">Today:</string>
    <string name="name1">Name</string>
    <string name="price1">Price</string>
    <string name="name2">Name</string>
    <string name="week">Week:</string>
    <string name="month">Month:</string>
    <string name="price2">Price</string>
    <string name="price3">Price</string>
    <string name="date2">Date</string>
    <string name="name3">Name</string>
    <string name="date3">Date</string>
    <string name="price4">Price</string>
    <string name="price5">Price</string>
    <string name="name4">Name</string>
    <string name="date4">Date</string>
    <string name="date5">Date</string>
    <string name="previous_purchases">Previous Purchases</string>
    <string name="name5">Name</string>
    <string name="transaction_name">Transaction \nName</string>
    <string name="pdate">Date of \nTransaction</string>
    <string name="title_activity_add_transaction">AddTransaction</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_transaction">Add A Transaction</string>
    <string name="button">Button</string>
    <string name="cost">Cost</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="date">Date</string>
    <string name="view_all_transactions">View All Transactions</string>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="back">Back</string>

    <string-array name="categories">
        <item>Restaurant</item>
        <item>Groceries</item>
        <item>Books</item>
        <item>Electronics</item>
        <item>Devices</item>
        <item>Video Games</item>
        <item>Clothing</item>
    </string-array>

</resources>
