<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AppMain">


    <TextView
            android:text="@string/today"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView5" android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"/> <!-- Today -->
    <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textSize="36sp"
            android:layout_marginStart="38dp" app:layout_constraintStart_toEndOf="@+id/textView5"
            android:layout_marginBottom="18dp" app:layout_constraintBottom_toTopOf="@+id/textView6"/> <!-- Title -->
    <TextView
            android:text="@string/week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textView4" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            android:layout_marginStart="149dp" android:layout_marginEnd="149dp"
    /> <!-- Week -->
    <TextView
            android:text="@string/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:layout_marginEnd="57dp"
            app:layout_constraintEnd_toEndOf="parent"/> <!-- Month -->
    <TextView
            android:text="@string/previous_purchases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="9dp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout4"/> <!-- Previous Purchases -->

    <TableLayout
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:id="@+id/tableLayout4"
            android:layout_marginTop="183dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp" android:layout_marginEnd="4dp">

        <TableRow
                android:layout_width="395dp"
                android:layout_height="457dp" tools:layout_editor_absoluteY="266dp" tools:layout_editor_absoluteX="8dp">
            <TextView
                    android:id="@+id/trndate1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:text="@string/date1">

            </TextView>

            <TextView
                    android:id="@+id/trnname1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:maxLines="5"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:text="@string/name1">

            </TextView>
            <TextView
                    android:id="@+id/trnprice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="8dp"
                    android:text="@string/price1"
                    android:textStyle="bold">

            </TextView>
        </TableRow> <!-- First Row -->
        <TableRow
                android:layout_width="395dp"
                android:layout_height="457dp" tools:layout_editor_absoluteY="266dp" tools:layout_editor_absoluteX="8dp">
            <TextView
                    android:id="@+id/trndate2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:text="@string/date2">

            </TextView>

            <TextView
                    android:id="@+id/trnname2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:maxLines="5"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:text="@string/name2">

            </TextView>
            <TextView
                    android:id="@+id/trnprice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="8dp"
                    android:text="@string/price2"
                    android:textStyle="bold">

            </TextView>
        </TableRow> <!-- Second Row -->
        <TableRow
                android:layout_width="395dp"
                android:layout_height="457dp" tools:layout_editor_absoluteY="266dp" tools:layout_editor_absoluteX="8dp">
            <TextView
                    android:id="@+id/trndate3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:text="@string/date3">

            </TextView>

            <TextView
                    android:id="@+id/trnname3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:maxLines="5"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:text="@string/name3">

            </TextView>
            <TextView
                    android:id="@+id/trnprice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="8dp"
                    android:text="@string/price1"
                    android:textStyle="bold">

            </TextView>
        </TableRow> <!-- Third Row -->
        <TableRow
                android:layout_width="395dp"
                android:layout_height="457dp" tools:layout_editor_absoluteY="266dp" tools:layout_editor_absoluteX="8dp">
            <TextView
                    android:id="@+id/trndate4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:text="@string/date4">

            </TextView>

            <TextView
                    android:id="@+id/trnname4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:maxLines="5"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:text="@string/name4">

            </TextView>
            <TextView
                    android:id="@+id/trnprice4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="8dp"
                    android:text="@string/price4"
                    android:textStyle="bold">

            </TextView>
        </TableRow> <!-- Fourth Row -->
        <TableRow
                android:layout_width="395dp"
                android:layout_height="457dp" tools:layout_editor_absoluteY="266dp" tools:layout_editor_absoluteX="8dp">
            <TextView
                    android:id="@+id/trndate5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:text="@string/date5">

            </TextView>

            <TextView
                    android:id="@+id/trnname5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:maxLines="5"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:text="@string/name1">

            </TextView>
            <TextView
                    android:id="@+id/trnprice5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="8dp"
                    android:text="@string/price1"
                    android:textStyle="bold">

            </TextView>
        </TableRow> <!-- Fifth Row -->


    </TableLayout>
    <ImageButton
            android:layout_width="128dp"
            android:layout_height="115dp" app:srcCompat="@drawable/add" android:id="@+id/imageButton"
            android:contentDescription="@string/add_a_transaction"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="140dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.007" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout4"/>
    <ImageButton
            android:src="@drawable/about"
            android:layout_width="56dp"
            android:layout_height="58dp"
            android:id="@+id/imageButton2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="140dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.142"/>
    <ImageButton
            android:src="@drawable/settings"
            android:layout_width="56dp"
            android:layout_height="58dp"
            android:id="@+id/imageButton3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/imageButton2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.985"
            app:layout_constraintVertical_bias="0.142"/>


</androidx.constraintlayout.widget.ConstraintLayout>