<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ViewAllTransactions" android:id="@+id/frameLayout">
    <TextView
            android:text="@string/view_all_transactions"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView" android:textSize="36sp"
            android:gravity="center" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="7dp" app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TableLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/tableLayout" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginBottom="11dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

        <TableRow android:layout_width="match_parent" android:layout_height="200dp" android:id="@+id/headerRow">
            <TextView
                    android:text="@string/transaction_name"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content" android:id="@+id/headerTrnName" android:textSize="24sp"/>
            <TextView
                    android:text="@string/cost"
                    android:layout_width="103dp"
                    android:layout_height="match_parent" android:id="@+id/headerCost" android:textSize="24sp"/>
            <TextView
                    android:text="@string/pdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/headerDay" android:textSize="24sp"
            />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content" android:id="@+id/firstTrnName" android:textSize="20sp"/>
            <TextView
                    android:layout_width="103dp"
                    android:layout_height="wrap_content" android:id="@+id/firstCostCol" android:textSize="20sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/firstDate" android:textSize="20sp"
            />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"/>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"/>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>